examples/type_system/failing/112_keyword_alias_def.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 2 errors • examples/type_system/failing/112_keyword_alias_def.flx
// error[E030]: Unknown Keyword
//
// Unknown keyword `def`. Flux uses `fn` for function declarations.
//
//   examples/type_system/failing/112_keyword_alias_def.flx:33:1
//    |
// 33 | def add(a: Int, b: Int) -> Int {
//    | ^^^
//
// Hint:
//   Did you mean `fn`?
//
//
// error[E031]: Expected Expression
//
// Expected expression, found `->`.
//
//   examples/type_system/failing/112_keyword_alias_def.flx:33:25
//    |
// 33 | def add(a: Int, b: Int) -> Int {
//    |                         ^^
//
// Found 2 errors.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E030
// expect-error: E031

def add(a: Int, b: Int) -> Int {
    a + b
}
